# marugoto_mods

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
marugoto_mods/: ViT_extractor.py  __init__.py  gradcam.py  heatmaps.py  mil_mods.py  pre-processing.py  vis_mods.py
marugoto_mods/RetCCL/: ResNet.py
