[metadata]
name = marugoto_mods
version = 1.0
author = James Brooks
author_email = jamesalexander.brooks@med.uni-duesseldorf.de
description = modifications to the marugoto repository by KatherLab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brooksja/marugoto_mods.git
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: Fedora 36
