[metadata]
name = marugoto_mods
version = 1.5
author = James Brooks
author_email = jamesalexander.brooks@med.uni-duesseldorf.de
description = modifications to the marugoto repository by KatherLab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brooksja/marugoto_mods.git
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: Fedora 36

[options]
packages = find:
python_requires = >=3.8
install_requires = [marugoto @ git+https://github.com/KatherLab/marugoto.git,
                    RetCCL @ git+https://github.com/Xiyue-Wang/RetCCL.git]
